added default folders for license and files, added small fixes

--- a/configuration.yml
+++ b/configuration.yml
@@ -16,7 +16,7 @@ server:
 application:
   # License path
   # Absolute path to GroupDocs license file
-  licensePath:  C:/GroupDocs/Java/Total/GroupDocs.Annotation.Java.lic
+  licensePath:  Licenses/GroupDocs.Annotation.Java.lic
 
 ################################################
 # Common configurations
@@ -48,7 +48,7 @@ common:
 annotation:
   # Files directory path
   # Absolute path to files directory
-  filesDirectory: C:/GroupDocs/Documents/
+  filesDirectory: DocumentSamples
   # Default document
   # Absolute path to default document
   defaultDocument:
