added release deploy

--- a/configuration.yml
+++ b/configuration.yml
@@ -3,6 +3,7 @@
 ################################################
 server:
   type: simple
+  hostAddress: localhost
   applicationContextPath: /
   adminContextPath: /admin
   connector:
@@ -16,7 +17,7 @@ server:
 application:
   # License path
   # Absolute path to GroupDocs license file
-  licensePath:  Licenses/GroupDocs.Annotation.Java.lic
+  licensePath:  
 
 ################################################
 # Common configurations
