--- a/configuration.yml
+++ b/configuration.yml
@@ -2,6 +2,7 @@
 # Server configurations
 ################################################
 server:
+  hostAddress:
   connector:
     # Changing port is available for embedded server only
     # Is is not possible to change port for deploying application on external server
