--- a/src/main/resources/defaultConfiguration.yml
+++ b/src/main/resources/defaultConfiguration.yml
@@ -2,7 +2,6 @@
 # Server configurations
 ################################################
 server:
-  hostAddress:
   connector:
     # Changing port is available for embedded server only
     # Is is not possible to change port for deploying application on external server
@@ -15,7 +14,10 @@ server:
 application:
   # License path
   # Absolute or relative path to GroupDocs license file
-  licensePath: 
+  licensePath:
+  # Host name or ip for server instance
+  hostAddress:
+
 
 ################################################
 # Common configurations
