fixed angular problems

--- a/client/package.json
+++ b/client/package.json
@@ -24,45 +24,44 @@
     "update": "ng update @nrwl/workspace",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "help": "nx help"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.0",
-    "@angular/common": "9.0.0",
-    "@angular/compiler": "9.0.0",
-    "@angular/core": "9.0.0",
-    "@angular/forms": "9.0.0",
-    "@angular/platform-browser": "9.0.0",
-    "@angular/platform-browser-dynamic": "9.0.0",
-    "@angular/router": "9.0.0",
-    "@groupdocs.examples.angular/annotation": "^0.6.0",
-    "@nrwl/angular": "9.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.5.4",
-    "zone.js": "^0.10.2"
+    "@angular/animations": "^8.2.4",
+    "@angular/common": "^8.2.4",
+    "@angular/compiler": "^8.2.4",
+    "@angular/core": "^8.2.4",
+    "@angular/forms": "^8.2.4",
+    "@angular/platform-browser": "^8.2.4",
+    "@angular/platform-browser-dynamic": "^8.2.4",
+    "@angular/router": "^8.2.4",
+    "@groupdocs.examples.angular/annotation": "^0.6.1",
+    "@nrwl/angular": "^8.12.2",
+    "common-components": "^1.0.5",
+    "core-js": "^2.6.11",
+    "rxjs": "~6.4.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "9.0.1",
-    "@nrwl/workspace": "9.0.0",
+    "@angular-devkit/build-angular": "^0.800.1",
+    "@angular/cli": "8.1.1",
+    "@angular/compiler-cli": "^8.2.13",
+    "@angular/language-service": "^8.2.13",
+    "@nrwl/cypress": "8.4.3",
+    "@nrwl/jest": "8.4.3",
+    "@nrwl/workspace": "8.4.3",
+    "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
+    "cypress": "~3.3.1",
     "dotenv": "6.2.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
+    "prettier": "1.16.4",
+    "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.7.4",
-    "prettier": "1.18.2",
-    "@angular/compiler-cli": "9.0.0",
-    "@angular/language-service": "9.0.0",
-    "@angular-devkit/build-angular": "0.900.1",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "8.0.0",
-    "@nrwl/jest": "9.0.0",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
-    "cypress": "^3.8.2",
-    "@nrwl/cypress": "9.0.0"
+    "typescript": "~3.4.5"
   }
 }
