--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.groupdocs.ui</groupId>
     <artifactId>annotation-spring</artifactId>
-    <version>1.12.27</version>
+    <version>1.12.25</version>
     <packaging>${packaging.type}</packaging>
 
     <name>GroupDocs.Annotation for Java Spring Sample</name>
@@ -102,20 +102,20 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- For using tomcat please uncomment this tomcat dependency
+        <!-- For using tomcat please uncomment this tomcat dependency-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <version>2.0.4.RELEASE</version>
             <scope>${scope}</scope>
-        </dependency>-->
+        </dependency>
         <!-- For using tomcat please comment or remove this jetty dependency -->
-        <dependency>
+        <!--dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jetty</artifactId>
             <version>2.0.4.RELEASE</version>
             <scope>${scope}</scope>
-        </dependency>
+        </dependency-->
         <!-- the end of jetty dependency -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -132,7 +132,7 @@
         <dependency>
             <groupId>com.groupdocs</groupId>
             <artifactId>groupdocs-annotation</artifactId>
-            <version>19.7</version>
+            <version>21.7</version>
         </dependency>
 
         <dependency>
@@ -143,7 +143,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.7</version>
+            <version>2.6</version>
         </dependency>
     </dependencies>
 
